実行ファイルに伴ってできた成果物

--- a/compile/makefile
+++ b/compile/makefile
@@ -7,7 +7,7 @@ else
 endif
 LIBS      = 
 INCLUDE   = -I./include
-TARGET    = idana
+TARGET    = ./bin/idana
 SRCDIR    = ./source
 ifeq "$(strip $(SRCDIR))" ""
   SRCDIR  = .
